# ju-tcs-rust-23-20-b

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
