[package]
name = "ju-tcs-rust-23-20-b"
version = "0.1.0"
edition = "2021"
description = "An executable to get tail and head of the file"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ju-tcs-rust-23-20 = "0.1.1"
